--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
   "description": "corrbee",
   "main": "app.js",
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "slugify": "^1.6.6",
+    "socket.io": "^4.3.2",
     "type": "module"
 
   },
