--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "corrbee",
   "main": "app.js",
+
+  
   "scripts": {
     "test": "node app",
     "dev": "nodemon app",
@@ -24,16 +26,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "slugify": "^1.6.6",
-    "socket.io": "^4.3.2",
-    "type": "module"
-
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-  
-  
-  
-  
-  
 }
