--- a/admin/package.json
+++ b/admin/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-image-magnify": "^2.7.4",
+    "react-image-magnify": "2.6.0",
+
     "react-phone-number-input": "^3.2.23",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.1.3",
