--- a/munna/package.json
+++ b/munna/package.json
@@ -1,8 +1,9 @@
 {
   "name": "munna",
   "version": "0.1.0",
-  "proxy": "https://corrbee.onrender.com",
   "private": true,
+  "homepage": ".",
+
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@reduxjs/toolkit": "^1.9.7",
@@ -18,7 +19,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-image-magnify": "^2.7.3",
     "react-owl-carousel": "^2.3.3",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
@@ -34,9 +34,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "resolutions": {
-    "util._extend": "4.0.0"
   },
   "eslintConfig": {
     "extends": [
